[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Maps/ProtoMap/ProtoMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Enemy/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Main/Main.gd" type="Script" id=4]
[ext_resource path="res://fonts/JMH Holy Bible.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 54
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 5 )

[node name="Main" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ProtoMap" parent="." instance=ExtResource( 1 )]

[node name="Enemy" parent="." groups=["CHARACTER"] instance=ExtResource( 3 )]
position = Vector2( 735, 280 )

[node name="Player" parent="." groups=["CHARACTER"] instance=ExtResource( 2 )]
position = Vector2( 323, 280 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true

[node name="LbWinner" type="Label" parent="."]
visible = false
margin_left = 299.0
margin_top = 34.0
margin_right = 766.0
margin_bottom = 194.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_Timer_timeout"]
